--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,9 @@ jobs:
 
     - name: composer install
       run: composer install
+      
+    - name: composer update
+      run: composer update
 
     - name: Run PHP CodeSniffer
       run: composer cs-check
