--- a/config/.env.example
+++ b/config/.env.example
@@ -33,9 +33,9 @@ export SECURITY_SALT="__SALT__"
 #export DATABASE_URL="mysql://my_app:secret@localhost/${APP_NAME}?encoding=utf8&timezone=UTC&cacheMetadata=true&quoteIdentifiers=false&persistent=false"
 #export DATABASE_TEST_URL="mysql://my_app:secret@localhost/test_${APP_NAME}?encoding=utf8&timezone=UTC&cacheMetadata=true&quoteIdentifiers=false&persistent=false"
 
-export DBUSERNAME="root"
-export DBPASSWORD="root"
-export DBDATABASE="cakephp"
+export DB_USER="root"
+export DB_PASSWORD="root"
+export DB_DATABASE="cakephp"
 
 # Uncomment these to define logging configuration via environment variables.
 #export LOG_DEBUG_URL="file://logs/?levels[]=notice&levels[]=info&levels[]=debug&file=debug"
