--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Run PHPUnit
       run: |       
        if [[ ${{ matrix.php-version }} == '7.4' ]]; then
-          vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
+           export CODECOVERAGE=1 && vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
         else
           vendor/bin/phpunit
         fi
