--- a/config/.env.example
+++ b/config/.env.example
@@ -37,6 +37,14 @@ export DB_USER="root"
 export DB_PASSWORD="root"
 export DB_DATABASE="cakephp"
 
+export DB_APP_HOST = "localhost"
+export DB_APP_PORT = "3306"
+export DB_APP_USER = "root"
+#export DB_APP_PASSWORD = null
+export DB_APP_DATABASE = "cakephp"
+#export DB_APP_SCHEMA = "myapp"
+#export DATABASE_APP_URL =  null
+
 
 # Uncomment these to define logging configuration via environment variables.
 #export LOG_DEBUG_URL="file://logs/?levels[]=notice&levels[]=info&levels[]=debug&file=debug"
