--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
+        "cakephp/authentication": "^2.0",
         "cakephp/cakephp": "~4.2.0",
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.3",
-        "cakephp/authentication":"^2.0",
+        "fakerphp/faker": "^1.17",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
