--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -2,6 +2,10 @@ codecov:
   require_ci_to_pass: yes
 
 coverage:
-  range: "70...100"
+  range: "50...70"
+  project:
+      default:
+        threshold: 5%
+  
 
 comment: false
